# klujur

./: .gitattributes  .gitignore  .harper-dictionary.txt  BUILTINS.md  Cargo.toml  PARITY.md  README.md
demo/: klujur.qp
klujur-core/: Cargo.toml
klujur-core/src/: bindings.rs  builtins.rs  env.rs  error.rs  eval.rs  lib.rs  namespace.rs
klujur-core/src/builtins/: additional_higher_order.rs  additional_predicates.rs  arithmetic.rs  atoms.rs  bitwise.rs  chunked.rs  collection_constructors.rs  collection_utils.rs  collections.rs  comparators.rs  comparison.rs  datetime.rs  eager_sequences.rs  exceptions.rs  higher_order.rs  io.rs  laziness.rs  logic.rs  math.rs  metadata.rs  mod.rs  multimethods.rs  predicates.rs  random.rs  regex.rs  sequences.rs  set_ops.rs  strings.rs  transducers.rs  type_checks.rs  vars.rs
klujur-core/tests/: apply_test.rs  atom_test.rs  bigint_test.rs  bigratio_test.rs  bindings_test.rs  collections_test.rs  delay_test.rs  destructuring_test.rs  error_message_test.rs  exceptions_test.rs  for_comprehension_test.rs  functions_test.rs  hierarchy_test.rs  klujur_test_framework.rs  lazy_seq_test.rs  logic_test.rs  loop_recur_test.rs  macro_edge_cases_test.rs  metadata_test.rs  multi_arity_test.rs  multimethod_test.rs  namespace_test.rs  numbers_test.rs  overflow_test.rs  proptest_collections.rs  proptest_destructuring.rs  proptest_hash_eq.rs  proptest_numeric.rs  protocol_test.rs  ratio_test.rs  reader_test.rs  record_test.rs  sequences_test.rs  sorted_collections_test.rs  special_forms_test.rs  transducer_test.rs
klujur-parser/: Cargo.toml
klujur-parser/src/: hierarchy.rs  keyword.rs  lexer.rs  lib.rs  parser.rs  symbol.rs  value.rs
klujur-vm/: Cargo.toml
klujur-vm/src/: chunk.rs  lib.rs  opcode.rs  utils.rs
klujur-vm/tests/: error_paths_test.rs  function_test.rs
(+69 files in other folders)
