[package]
name = "klujur"
version.workspace = true
edition.workspace = true
license.workspace = true

[workspace]
resolver = "3"
members = ["klujur-parser", "klujur-core", "xtask"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
klujur-parser = { path = "klujur-parser" }
klujur-core = { path = "klujur-core" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
